--- a/Select-screen/select.html
+++ b/Select-screen/select.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Question Sets</title>
     <link rel="stylesheet" href="./select.css">
-    <script src="static/js/questions.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="./select.js" defer></script>
 </head>
 <body>
     <h1>Manage Question Sets</h1>
@@ -15,6 +16,18 @@
 
     <h2>Existing Sets</h2>
     <ul id="setList"></ul>
+
+    <h2>Create Question</h2>
+    <div class="create">
+        <select id="setSelect"></select>
+        <input id="questionInput" placeholder="Enter question">
+        <input id="answerInput" placeholder="Enter answer">
+    </div>
+    <button onclick="addQuestion()">Add Question</button>
+    
+
+    <h2>Cards in Selected Set</h2>
+    <div id="cardsContainer"></div>
 
     <button onclick="goBack()">Back to Menu</button>
 </body>
